<resources>
    <string name="app_name">Two Way Databinding</string>

    <string name="wooden">Wooden</string>
    <string name="electronic">Electronic</string>
    <string name="plastic">Plastic</string>
    <string name="plush">Plush</string>

    <string name="bought">Bought</string>
    <string name="received">Received</string>
    <string name="categories">Categories:</string>
    <string name="name">Name:</string>
    <string name="suitable_for">Suitable for:</string>
    <string name="state">State:</string>
    <string name="toy_name">Toy Name</string>
    <string name="cd_item_gender">Color corresponding to gender</string>
    <string name="cd_state_symbol">Image corresponding to state of the toy, new or used</string>
    <string name="cd_empty_image">Crying baby icon, shown when there is no toy</string>
    <string name="no_toys_message">No toys in your inventory yet. Press over the + button to add one.</string>
    <string name="musical">Musical</string>
    <string name="educative">Educative</string>
    <string name="undo">UNDO</string>
    <string name="toy_is_deleted">Toy is deleted</string>
    <string name="toy_empty_warning">Toy name can\'t be empty</string>
    <string name="unsaved_changes_warning_title">Discard changes?</string>
    <string name="unsaved_changes_warning_message">Are you sure you want to discard the changes?</string>
    <string name="yes">Yes</string>
</resources>
